[package]
name = "wgpu-renderer"
version = "0.1.0"
authors = ["Douady Pâris <paris.douady@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

wgpu          = "0.6.0"
futures       = { version = "0.3.4", default-features = false, features = ["executor"] }
bytemuck      = "1.2.0"
image         = { version = "0.23.4", default-features = false, features = ["png"] }
egregoria     = { path = "../egregoria" }
geom          = { path = "../geom" }
mint          = "0.5.5"
imgui-wgpu    = "0.9.0"
imgui-winit-support = "0.4.0"
map_model     = { path = "../map_model" }
lazy_static   = "1.4.0"
env_logger    = "0.7.1"
log           = "0.4.11"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
winit         = "0.22"
glsl-to-spirv = { version = "0.1.7", optional = true }
naga          = { git = "https://github.com/gfx-rs/naga", features = ["glsl", "spirv-out"], optional = true}

[target.'cfg(target_arch = "wasm32")'.dependencies]
#winit         = { version = "0.22", features=["stdweb"] }

[features]
default = []
spirv_g2s = ["glsl-to-spirv"]
spirv_naga = ["naga"]