[package]
name = "wgpu_engine"
version = "0.1.0"
authors = ["Paris DOUADY <paris.douady@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geom      = { path = "../geom" }
common    = { path = "../common" }
wgpu      = { version = "0.12.0", features = [] }
bytemuck  = "1.7.2"
image     = { version = "0.23.4", default-features = false, features = ["png"] }
log       = "0.4.11"
raw-window-handle = "0.4.3"
naga      = { version = "0.8.5", default-features=false, features = ["glsl-in", "wgsl-out"] }
gltf      = "0.16.0"
itertools = { version = "0.10.0", default-features = false }
profiling = "1.0.1"
rayon     = "1.4"

[features]
default = []