[package]
name = "wgpu_engine"
version = "0.1.0"
authors = ["Paris DOUADY <paris.douady@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geom      = { path = "../geom" }
common    = { path = "../common" }
wgpu      = { version = "0.13.1", features = [] }
bytemuck  = "1.7.2"
image     = { version = "0.24.3", default-features = false, features = ["png"] }
log       = "0.4.11"
raw-window-handle = "0.4.3"
gltf      = { git = "https://github.com/gltf-rs/gltf", default-features=false, features=["import", "utils"] }
itertools = { version = "0.10.0", default-features = false }
profiling = "1.0.1"
rayon     = "1.5"
beul      = "0.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies.wgpu]
version = "0.13.1"
features = ["webgl"]

[features]
default = []