[package]
name = "wgpu_engine"
version = "0.1.0"
authors = ["Paris DOUADY <paris.douady@hotmail.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geom      = { path = "../geom" }
common    = { path = "../common" }
ordered-float = { workspace = true }
wgpu      = { version = "0.16.0", default-features = false, features=["wgsl"] }
bytemuck  = "1.7.2"
image     = { version = "0.24.3", default-features = false, features = ["png"] }
log       = "0.4.11"
raw-window-handle = "0.5.0"
gltf      = { version = "1.2.0", default-features=false, features=["import", "utils", "names"] }
itertools = { version = "0.10.0", default-features = false }
profiling = "1.0.1"
rayon     = "1.6"
beul      = "1.0.0"
slotmapd   = "1.0"
radiant = { version = "0.3.0", features = ["bytemuck"] }
smallvec = "1.10.0"
inline_tweak = "1.0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies.wgpu]
version = "0.16.0"
features = ["webgl"]

[features]
default = []